src/test/deca/context/invalid/method_wrong_return_type_field.deca
/*
    Description : Méthode retournant un booléen alors que figure int dans sa signature

    Résultat : Erreur contextuelle
*/
class C{
    boolean b = true;
    int y(){
        return b;
    }
}
